# COVIDStateTracker

./: .gitignore  .replit  Documentation.md  LICENSE  README.md  pyproject.toml  setup.py  test.py
covidstates/: states.py
states/: __init__.py  states.py
