[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covidstatetracker"
version = "0.0.3"
authors = [
  { name="Devon Schwartz", email="devon.s.schwartz@gmail.com" },
]
description = "A package to analyze COVID-19 data using the NYTimes COVID-19 dataset"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DevonSchwartz/COVIDStateTracker"

